Swagger
- Better type control on auth.controller
